--- a/app/src/main/res/layout/fragment_department_dayjournal.xml
+++ b/app/src/main/res/layout/fragment_department_dayjournal.xml
@@ -35,6 +35,10 @@
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_xrz_calender"/>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/lineColor"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -57,7 +61,8 @@
             <com.wtcrmandroid.view.listview.MyListView
                 android:id="@+id/lv_dayplan_details"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:divider="@null">
             </com.wtcrmandroid.view.listview.MyListView>
 
             <TextView
