--- a/app/src/main/res/layout/fragment_daysum_singlecustomer.xml
+++ b/app/src/main/res/layout/fragment_daysum_singlecustomer.xml
@@ -7,7 +7,8 @@
     <ListView
         android:id="@+id/lv_single_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:divider="@null">
 
     </ListView>
 
