--- a/app/src/main/res/layout/fragment_department_weekjournal.xml
+++ b/app/src/main/res/layout/fragment_department_weekjournal.xml
@@ -33,6 +33,10 @@
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_grayright_arrow"/>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/lineColor"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -56,7 +60,8 @@
             <com.wtcrmandroid.view.listview.MyListView
                 android:id="@+id/lv_weekplan_details"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:divider="@null">
             </com.wtcrmandroid.view.listview.MyListView>
 
             <TextView
@@ -72,6 +77,7 @@
                 android:id="@+id/lv_weeksum_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:divider="@null"
                 android:layout_marginBottom="10dp">
             </com.wtcrmandroid.view.listview.MyListView>
 
