--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -1,203 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
     android:scrollbars="none">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorBackground"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@mipmap/ic_my_background" />
-
-            <TextView
-                android:id="@+id/tv_motto_modify"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:drawablePadding="2dp"
-                android:drawableRight="@mipmap/ic_motto_editor"
-                android:gravity="center_vertical"
-                android:text="在学习中感悟，在工作中进取！"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/tv_motto_modify"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="13dp"
-                android:text="李悦"
-                android:textColor="@android:color/white"
-                android:textSize="16sp" />
-
-            <com.thinkcool.circletextimageview.CircleTextImageView
-                android:id="@+id/ib_head_picture"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_above="@id/tv_name"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="5dp"
-                app:citv_fill_color="@color/color_gray_999"
-                app:citv_text_color="@color/white"
-                app:citv_text_size="22sp"
-                app:citv_text_text="李悦" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginBottom="1dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-
-            <TextView
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/myphone_number" />
-
-            <TextView
-                android:id="@+id/tv_my_phonenumber"
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:drawableRight="@mipmap/ic_grayright_arrow"
-                android:text="18530800325" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginBottom="1dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-
-            <TextView
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_department" />
-
-            <TextView
-                android:id="@+id/tv_my_department"
-                style="@style/HintText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="产品部" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-
-            <TextView
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_job" />
-
-            <TextView
-                android:id="@+id/tv_my_job"
-                style="@style/HintText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="产品部员工" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-
-            <TextView
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_card" />
-
-            <TextView
-                android:id="@+id/tv_my_card"
-                style="@style/HintText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:drawableRight="@mipmap/ic_grayright_arrow" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-
-            <TextView
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_attendance" />
-
-            <TextView
-                android:id="@+id/tv_my_attendance"
-                style="@style/HintText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:drawableRight="@mipmap/ic_grayright_arrow" />
-
-        </RelativeLayout>
-
-        <Button
-            android:id="@+id/bt_out"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/shap_bt_back"
-            android:text="安全退出"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/Text36" />
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/ic_my_background" />
+
+                <TextView
+                    android:id="@+id/tv_motto_modify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:drawablePadding="2dp"
+                    android:gravity="center_vertical"
+                    android:text="在学习中感悟，在工作中进取！"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@id/tv_motto_modify"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="13dp"
+                    android:text="李悦"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
+
+                <com.thinkcool.circletextimageview.CircleTextImageView
+                    android:id="@+id/ib_head_picture"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:layout_above="@id/tv_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="5dp"
+                    app:citv_fill_color="@color/color_gray_999"
+                    app:citv_text_color="@color/white"
+                    app:citv_text_size="22sp"
+                    android:src="@mipmap/ic_photo_upload"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginBottom="1dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    android:id="@+id/tv_hintTel"
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/myphone_number" />
+
+                <TextView
+                    android:id="@+id/tv_my_phonenumber"
+                    style="@style/ContentText"
+                    android:layout_toRightOf="@id/tv_hintTel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:layout_alignParentRight="true"
+                    android:drawableRight="@mipmap/ic_grayright_arrow"
+                    android:text="18530800325" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginBottom="1dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_department" />
+
+                <TextView
+                    android:id="@+id/tv_my_department"
+                    style="@style/HintText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:text="产品部" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_job" />
+
+                <TextView
+                    android:id="@+id/tv_my_job"
+                    style="@style/HintText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:text="产品部员工" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_card" />
+
+                <TextView
+                    android:id="@+id/tv_my_card"
+                    style="@style/HintText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:drawableRight="@mipmap/ic_grayright_arrow" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <TextView
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_attendance" />
+
+                <TextView
+                    android:id="@+id/tv_my_attendance"
+                    style="@style/HintText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:drawableRight="@mipmap/ic_grayright_arrow" />
+
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/bt_out"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="30dp"
+                android:background="@drawable/shap_bt_back"
+                android:text="安全退出"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/Text36" />
 
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 
-</ScrollView>
+</LinearLayout>
